k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gokite
  labels:
    name: gokite
    environment: production
